# PhysX

./: .gitignore  CMakeLists.txt  README.md
blast/: CMakeLists.txt  README.md  build.py
blast/PACKAGE-LICENSES/: blast-sdk-LICENSE.md
blast/cmake/: NvBlast.cmake  NvBlastExtAssetUtils.cmake  NvBlastExtAuthoring.cmake  NvBlastExtPhysX.cmake  NvBlastExtSerialization.cmake  NvBlastExtShaders.cmake  NvBlastExtStress.cmake  NvBlastExtTkSerialization.cmake  NvBlastExtUnity.cmake  NvBlastGlobals.cmake  NvBlastTk.cmake  UnitTests.cmake
blast/dependencies/shared/BoostMultiprecision/: Readme.md
blast/dependencies/shared/CapnProto/src/kj/: debug.c++
blast/include/extensions/authoring/: NvBlastExtAuthoringFractureTool.h
blast/include/extensions/unity/: NvBlastExtUnity.h  NvBlastFracturer.h
blast/include/globals/: NvCMath.h
blast/include/shared/NvFoundation/: NvPreprocessor.h
blast/source/sdk/extensions/authoring/VHACD/src/: FloatMath.cpp
blast/source/sdk/extensions/unity/: BoundingBoxConvexMeshBuilder.h  ClusteredVoronoiFracturer.h  CutOutFracturer.h  IslandsFracturer.h  NvBlastExtUnity.cpp  PlaneCutFracturer.h  SimpleRandomGenerator.h  SlicingFracturer.h  VoronoiFracturer.h
blast/source/shared/NsFoundation/include/: NsAllocator.h  NsAoS.h  NsArray.h  NsFPU.h  NsInlineAoS.h  NsVecMath.h
blast/source/shared/stress_solver/: anglin6.h  coupling.h  inertia.h  solver_types.h  stress.cpp
blast/source/shared/stress_solver/simd/: simd.h  simd_device_query.h
physx/buildtools/: cmake_generate_projects.py
physx/include/foundation/: PxAlloca.h  PxIntrinsics.h  PxMathIntrinsics.h  PxPreprocessor.h  PxUtilities.h  PxVecMath.h  PxVecQuat.h  PxVecTransform.h
physx/include/foundation/unix/: PxUnixIntrinsics.h
physx/snippets/compiler/cmake/: CMakeLists.txt
physx/source/compiler/cmake/: PhysXExtensions.cmake
physx/source/compiler/cmake/android/: CMakeLists.txt  PhysXExtensions.cmake
physx/source/compiler/cmake/ios/: CMakeLists.txt  PhysXExtensions.cmake
physx/source/compiler/cmake/mac/: CMakeLists.txt
physx/source/foundation/: FdTempAllocator.cpp
physx/source/foundation/unix/: FdUnixFPU.cpp  FdUnixPrintString.cpp  FdUnixSList.cpp  FdUnixThread.cpp
physx/source/physxextensions/src/serialization/: SnSerialUtils.cpp
physx/source/pvd/include/: PxProfileAllocatorWrapper.h
